--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ set in the _output.yml file.</p>" />
 <meta name="author" content="Jo Evans" />
 
 
-<meta name="date" content="2024-09-05" />
+<meta name="date" content="2024-09-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -124,6 +124,7 @@ set in the _output.yml file.</p>" />
 <li class="chapter" data-level="7" data-path="some-number-theory.html"><a href="some-number-theory.html"><i class="fa fa-check"></i><b>7</b> Some number theory</a>
 <ul>
 <li class="chapter" data-level="7.1" data-path="some-number-theory.html"><a href="some-number-theory.html#divisors-and-prime-numbers"><i class="fa fa-check"></i><b>7.1</b> Divisors and prime numbers</a></li>
+<li class="chapter" data-level="7.2" data-path="some-number-theory.html"><a href="some-number-theory.html#euclids-algorithm"><i class="fa fa-check"></i><b>7.2</b> Euclid’s Algorithm</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
@@ -149,7 +150,7 @@ set in the _output.yml file.</p>" />
 <div id="header">
 <h1 class="title">MA132: Foundations Lecture Notes</h1>
 <p class="author"><em>Jo Evans</em></p>
-<p class="date"><em>2024-09-05</em></p>
+<p class="date"><em>2024-09-13</em></p>
 </div>
 <div id="about" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">Chapter 1</span> About<a href="index.html#about" class="anchor-section" aria-label="Anchor link to header"></a></h1>
