--- a/some-number-theory.html
+++ b/some-number-theory.html
@@ -78,7 +78,7 @@ set in the _output.yml file.</p>" />
 <li><a href="./">MA132: Foundations</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> url: your book url like https://bookdown.org/yihui/bookdown</a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> About</a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#how-to-use-these-notes"><i class="fa fa-check"></i><b>1.1</b> How to use these notes</a></li>
 </ul></li>
@@ -153,30 +153,30 @@ set in the _output.yml file.</p>" />
 <h2><span class="header-section-number">7.1</span> Divisors and prime numbers<a href="some-number-theory.html#divisors-and-prime-numbers" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Let us recall the definition of divisor and prime numbers</p>
 <div class="definition">
-<p><span id="def:unlabeled-div-1" class="definition"><strong>Definition 7.1  (divisor) </strong></span>Given two natural numbers <span class="math inline">\(n\)</span> and <span class="math inline">\(m\)</span> we say <span class="math inline">\(n\)</span> is a divisor of <span class="math inline">\(m\)</span> (or <span class="math inline">\(n|m\)</span>) if there exists <span class="math inline">\(k \in \mathbb{N}\)</span> such that <span class="math inline">\(m=n\times k\)</span>.</p>
+<p><span id="def:unlabeled-div-166" class="definition"><strong>Definition 7.1  (divisor) </strong></span>Given two natural numbers <span class="math inline">\(n\)</span> and <span class="math inline">\(m\)</span> we say <span class="math inline">\(n\)</span> is a divisor of <span class="math inline">\(m\)</span> (or <span class="math inline">\(n|m\)</span>) if there exists <span class="math inline">\(k \in \mathbb{N}\)</span> such that <span class="math inline">\(m=n\times k\)</span>.</p>
 </div>
 <div class="definition">
-<p><span id="def:unlabeled-div-2" class="definition"><strong>Definition 7.2  (prime number) </strong></span>While we define divisor it is worth defining a prime number. We call <span class="math inline">\(p \in \mathbb{N}\)</span> a <em>prime number</em> if the only divisors of <span class="math inline">\(p\)</span> are <span class="math inline">\(1, p\)</span>.</p>
+<p><span id="def:unlabeled-div-167" class="definition"><strong>Definition 7.2  (prime number) </strong></span>While we define divisor it is worth defining a prime number. We call <span class="math inline">\(p \in \mathbb{N}\)</span> a <em>prime number</em> if the only divisors of <span class="math inline">\(p\)</span> are <span class="math inline">\(1, p\)</span>.</p>
 </div>
 <p>Now we have some new definitions</p>
 <div class="definition">
-<p><span id="def:unlabeled-div-3" class="definition"><strong>Definition 7.3  (greatest common divisor) </strong></span>Given two natural numbers <span class="math inline">\(n\)</span> and <span class="math inline">\(m\)</span> a number <span class="math inline">\(q\)</span> that divides both of them is a common divisor and the largest such number is called the <em>greatest common divisor</em> we write <span class="math inline">\(gcd(n,m)\)</span>.</p>
+<p><span id="def:unlabeled-div-168" class="definition"><strong>Definition 7.3  (greatest common divisor) </strong></span>Given two natural numbers <span class="math inline">\(n\)</span> and <span class="math inline">\(m\)</span> a number <span class="math inline">\(q\)</span> that divides both of them is a common divisor and the largest such number is called the <em>greatest common divisor</em> we write <span class="math inline">\(gcd(n,m)\)</span>.</p>
 </div>
 <p>This allows us to write a better definition of coprime</p>
 <div class="definition">
-<p><span id="def:unlabeled-div-4" class="definition"><strong>Definition 7.4  (coprime) </strong></span>If <span class="math inline">\(gcd(n,m)=1\)</span> then <span class="math inline">\(n\)</span> and <span class="math inline">\(m\)</span> are coprime.</p>
+<p><span id="def:unlabeled-div-169" class="definition"><strong>Definition 7.4  (coprime) </strong></span>If <span class="math inline">\(gcd(n,m)=1\)</span> then <span class="math inline">\(n\)</span> and <span class="math inline">\(m\)</span> are coprime.</p>
 </div>
 <div class="theorem">
-<p><span id="thm:unlabeled-div-5" class="theorem"><strong>Theorem 7.1  (division with remainder) </strong></span>Suppose that <span class="math inline">\(a \in \mathbb{Z}, b \in \mathbb{N}-\{0\}\)</span> then there exists <span class="math inline">\(q \in \mathbb{Z}\)</span> and <span class="math inline">\(r \in [[b]]\)</span> such that
+<p><span id="thm:unlabeled-div-170" class="theorem"><strong>Theorem 7.1  (division with remainder) </strong></span>Suppose that <span class="math inline">\(a \in \mathbb{Z}, b \in \mathbb{N}-\{0\}\)</span> then there exists <span class="math inline">\(q \in \mathbb{Z}\)</span> and <span class="math inline">\(r \in [[b]]\)</span> such that
 <span class="math display">\[ a =bq+r.  \]</span></p>
 </div>
 <div class="proof">
-<p><span id="unlabeled-div-6" class="proof"><em>Proof</em>. </span>If <span class="math inline">\(b=1\)</span> we just take <span class="math inline">\(q=a, r=0\)</span> so we can work in the case <span class="math inline">\(b &gt;1\)</span>.</p>
+<p><span id="unlabeled-div-171" class="proof"><em>Proof</em>. </span>If <span class="math inline">\(b=1\)</span> we just take <span class="math inline">\(q=a, r=0\)</span> so we can work in the case <span class="math inline">\(b &gt;1\)</span>.</p>
 <p>Let us fix <span class="math inline">\(b\)</span> and prove the result by induction on <span class="math inline">\(a\)</span>. If <span class="math inline">\(a=1\)</span> then <span class="math inline">\(a=0\times b+1\)</span>. This is the base case.</p>
 <p>Now if we assume that there exists <span class="math inline">\(q,r\)</span> such that <span class="math inline">\(a-1 = qb +r\)</span> then either <span class="math inline">\(r \in [[b-1]]\)</span> in which case <span class="math inline">\(a = qb + (r+1)\)</span> is a solution to our problem, or <span class="math inline">\(r=b-1\)</span> in which case we write <span class="math inline">\(a = (q+1)b\)</span>.</p>
 </div>
 <div class="example">
-<p><span id="exm:unlabeled-div-7" class="example"><strong>Example 7.1  </strong></span>How can we find the greatest common divisor of two numbers. One way to do it is by repeated division.</p>
+<p><span id="exm:unlabeled-div-172" class="example"><strong>Example 7.1  </strong></span>How can we find the greatest common divisor of two numbers. One way to do it is by repeated division.</p>
 <p>We can apply repeated division with <span class="math inline">\(81\)</span> and <span class="math inline">\(51\)</span>. We have
 <span class="math display">\[\begin{align*}
 81 &amp; = 1 \times 51 + 30,\\
@@ -201,7 +201,7 @@ set in the _output.yml file.</p>" />
 <h2><span class="header-section-number">7.2</span> Euclid’s Algorithm<a href="some-number-theory.html#euclids-algorithm" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Taking inspiration from calculations like the one above we can write down a procedure to find the greatest common divisor of <span class="math inline">\(a,b\)</span>.</p>
 <div class="definition">
-<p><span id="def:unlabeled-div-8" class="definition"><strong>Definition 7.5  (Euclid's Algorithm) </strong></span>Given <span class="math inline">\(a, b \in \mathbb{N}\)</span> with <span class="math inline">\(a &lt; b\)</span> we can write
+<p><span id="def:unlabeled-div-173" class="definition"><strong>Definition 7.5  (Euclid's Algorithm) </strong></span>Given <span class="math inline">\(a, b \in \mathbb{N}\)</span> with <span class="math inline">\(a &lt; b\)</span> we can write
 <span class="math display">\[\begin{align*}
 b &amp;= q_1a + r_1, \quad q_1 \in \mathbb{N}, r_1 \in [[a]],\\
 a &amp;= q_2r_1 + r_2, \quad q_2 \in \mathbb{N}, r_2 \in [[r_1]],\\
@@ -211,7 +211,7 @@ r_2 &amp; = \dots
 Eventually this process will terminate because we will have <span class="math inline">\(r_k = 0\)</span> for some <span class="math inline">\(k\)</span> and then we have <span class="math inline">\(r_k = gcd(a,b)\)</span>.</p>
 </div>
 <div class="theorem">
-<p><span id="thm:unlabeled-div-9" class="theorem"><strong>Theorem 7.2  (Euclid's Algorithm) </strong></span>Given the algorithm above we have the following
+<p><span id="thm:unlabeled-div-174" class="theorem"><strong>Theorem 7.2  (Euclid's Algorithm) </strong></span>Given the algorithm above we have the following
 - This algorithm will terminate. i.e. eventually we have <span class="math inline">\(r_{k-2} = q_k r_{k-1} + 0\)</span>.
 - In this case <span class="math inline">\(r_{k+1} = gcd(a,b)\)</span>
 - There exists <span class="math inline">\(x,y \in \mathbb{Z}\)</span> such that <span class="math inline">\(gcd(a,b) = xa+by\)</span>.</p>
