--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ set in the _output.yml file.</p>" />
 <meta name="author" content="Jo Evans" />
 
 
-<meta name="date" content="2024-09-18" />
+<meta name="date" content="2024-09-19" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -133,7 +133,14 @@ set in the _output.yml file.</p>" />
 <li class="chapter" data-level="7.3" data-path="some-number-theory.html"><a href="some-number-theory.html#chinese-remainder-theorem"><i class="fa fa-check"></i><b>7.3</b> Chinese remainder theorem</a></li>
 <li class="chapter" data-level="7.4" data-path="some-number-theory.html"><a href="some-number-theory.html#fermats-little-theorem-and-eulers-theorem"><i class="fa fa-check"></i><b>7.4</b> Fermat’s Little Theorem and Euler’s Theorem</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
+<li class="chapter" data-level="8" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html"><i class="fa fa-check"></i><b>8</b> Algorithms and Algorithmic complexity</a>
+<ul>
+<li class="chapter" data-level="8.1" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html#algorithmic-complexity"><i class="fa fa-check"></i><b>8.1</b> Algorithmic Complexity</a>
+<ul>
+<li class="chapter" data-level="8.1.1" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html#big-and-little-o-notation"><i class="fa fa-check"></i><b>8.1.1</b> Big and little O notation</a></li>
+</ul></li>
+<li class="chapter" data-level="8.2" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html#running-times-of-algorithms"><i class="fa fa-check"></i><b>8.2</b> Running times of algorithms</a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -157,7 +164,7 @@ set in the _output.yml file.</p>" />
 <div id="header">
 <h1 class="title">MA132: Foundations Lecture Notes</h1>
 <p class="author"><em>Jo Evans</em></p>
-<p class="date"><em>2024-09-18</em></p>
+<p class="date"><em>2024-09-19</em></p>
 </div>
 <div id="about" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">Chapter 1</span> About<a href="index.html#about" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -238,6 +245,20 @@ gitbook.start({
 });
 </script>
 
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    var src = "true";
+    if (src === "" || src === "true") src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/latest.js?config=TeX-MML-AM_CHTML";
+    if (location.protocol !== "file:")
+      if (/^https?:/.test(src))
+        src = src.replace(/^https?:/, '');
+    script.src = src;
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
 </body>
 
 </html>
