--- a/sets-and-functions.html
+++ b/sets-and-functions.html
@@ -29,7 +29,7 @@ set in the _output.yml file.</p>" />
 <meta name="author" content="Jo Evans" />
 
 
-<meta name="date" content="2024-09-29" />
+<meta name="date" content="2024-09-30" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -335,14 +335,14 @@ Figure 2.1: Picture showing A as a subset of B with sets indicated by circles
 <p><span id="def:unlabeled-div-31" class="definition"><strong>Definition 2.15  (image and pre-image) </strong></span>Given a function <span class="math inline">\(f:A \rightarrow B\)</span> then</p>
 <ul>
 <li><p>If <span class="math inline">\(C \subset A\)</span> we write <span class="math inline">\(f(C) = \{y \in B \,:\, y = f(x) \, \mbox{for some} \, x \in C\}\)</span>. We call <span class="math inline">\(f(C)\)</span> the <em>image</em> of <span class="math inline">\(C\)</span> under <span class="math inline">\(f\)</span>.</p></li>
-<li><p>If <span class="math inline">\(D \in B\)</span> we write <span class="math inline">\(f^{-1}(D)) = \{ x \in C \,:\, f(x) \in D\}\)</span>. We call <span class="math inline">\(f^{-1}(D)\)</span> the <em>pre-image</em> of <span class="math inline">\(D\)</span> under <span class="math inline">\(f\)</span>.</p></li>
+<li><p>If <span class="math inline">\(D \subset B\)</span> we write <span class="math inline">\(f^{-1}(D)) = \{ x \in A \,:\, f(x) \in D\}\)</span>. We call <span class="math inline">\(f^{-1}(D)\)</span> the <em>pre-image</em> of <span class="math inline">\(D\)</span> under <span class="math inline">\(f\)</span>.</p></li>
 </ul>
 </div>
 </div>
 <div id="properties-of-functions" class="section level2 hasAnchor" number="2.5">
 <h2><span class="header-section-number">2.5</span> Properties of functions<a href="sets-and-functions.html#properties-of-functions" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div class="definition">
-<p><span id="def:unlabeled-div-32" class="definition"><strong>Definition 2.16  (injectivity) </strong></span>A function <span class="math inline">\(f:A\rightarrow B\)</span> is called <em>injective</em> if <span class="math inline">\(f(x)=f(x&#39;)\)</span> implies that <span class="math inline">\(x=x&#39;\)</span>. That is to say there are no two elements of <span class="math inline">\(X\)</span> where <span class="math inline">\(f(x)\)</span> takes the same value, or <span class="math inline">\(y\)</span> has at most one preimage under <span class="math inline">\(f\)</span>.</p>
+<p><span id="def:unlabeled-div-32" class="definition"><strong>Definition 2.16  (injectivity) </strong></span>A function <span class="math inline">\(f:A\rightarrow B\)</span> is called <em>injective</em> if <span class="math inline">\(f(x)=f(x&#39;)\)</span> implies that <span class="math inline">\(x=x&#39;\)</span>. That is to say there are no two elements of <span class="math inline">\(A\)</span> where <span class="math inline">\(f(x)\)</span> takes the same value, or <span class="math inline">\(y\)</span> has at most one preimage under <span class="math inline">\(f\)</span>.</p>
 </div>
 <div class="example">
 <p><span id="exm:unlabeled-div-33" class="example"><strong>Example 2.9  </strong></span>The function <span class="math inline">\(f: \mathbb{R} \rightarrow \mathbb{R}\)</span> defined by <span class="math inline">\(f(x) =x^2\)</span> is not injective because for every <span class="math inline">\(y&gt;0\)</span> there are two possible values of <span class="math inline">\(x\)</span> such that <span class="math inline">\(x^2 = y\)</span>.</p>
