--- a/operations-on-sets-and-functions.html
+++ b/operations-on-sets-and-functions.html
@@ -325,8 +325,8 @@ Figure 3.8: picture of De Morgan’s Laws 2
 <div id="operations-on-functions" class="section level2 hasAnchor" number="3.3">
 <h2><span class="header-section-number">3.3</span> Operations on functions<a href="operations-on-sets-and-functions.html#operations-on-functions" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div class="definition">
-<p><span id="def:unlabeled-div-72" class="definition"><strong>Definition 3.4  (composition) </strong></span>Given sets <span class="math inline">\(A, B\)</span> and <span class="math inline">\(C\)</span> and functions <span class="math inline">\(f: A \rightarrow B\)</span> and <span class="math inline">\(g: B \rightarrow C\)</span> we can define a new function <span class="math inline">\(f \circ g\)</span> from <span class="math inline">\(A\)</span> to <span class="math inline">\(C\)</span> by
-<span class="math display">\[ f\circ g(x) = g(f(x)).  \]</span></p>
+<p><span id="def:unlabeled-div-72" class="definition"><strong>Definition 3.4  (composition) </strong></span>Given sets <span class="math inline">\(A, B\)</span> and <span class="math inline">\(C\)</span> and functions <span class="math inline">\(f: B \rightarrow C\)</span> and <span class="math inline">\(g: A \rightarrow B\)</span> we can define a new function <span class="math inline">\(f \circ g\)</span> from <span class="math inline">\(A\)</span> to <span class="math inline">\(C\)</span> by
+<span class="math display">\[ f\circ g(x) = f(g(x)).  \]</span></p>
 <div class="figure"><span style="display:block;" id="fig:unnamed-chunk-17"></span>
 <img src="compositiondiagram.png" alt="diagram of function composition"  />
 <p class="caption">
@@ -344,14 +344,14 @@ Figure 3.10: example of function composition
 </div>
 </div>
 <div class="example">
-<p><span id="exm:unlabeled-div-74" class="example"><strong>Example 3.7  </strong></span>Another example would be if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(f \circ g (x) = |x|\)</span> and is defined from <span class="math inline">\(\mathbb{R}\)</span> to <span class="math inline">\([0,\infty)\)</span>.</p>
+<p><span id="exm:unlabeled-div-74" class="example"><strong>Example 3.7  </strong></span>Another example would be if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(g \circ g (x) = |x|\)</span> and is defined from <span class="math inline">\(\mathbb{R}\)</span> to <span class="math inline">\([0,\infty)\)</span>.</p>
 </div>
 <div class="remark">
 <p><span id="unlabeled-div-75" class="remark"><em>Remark</em>. </span>An important example of composition is if <span class="math inline">\(A\)</span> is a set and <span class="math inline">\(f: A \rightarrow A\)</span> then we can compose <span class="math inline">\(A\)</span> with itself. We often write <span class="math inline">\(f\circ f = f^2\)</span> and <span class="math inline">\(f^n= f\circ f^{n-1}\)</span>.</p>
 </div>
 <div class="lemma">
 <p><span id="lem:unlabeled-div-76" class="lemma"><strong>Lemma 3.6  (Associativity of composition) </strong></span>Composition of functions is associative. That is to say, if <span class="math inline">\(A,B,C\)</span> and <span class="math inline">\(D\)</span> are all sets and <span class="math inline">\(f:A \rightarrow B, g: B \rightarrow C\)</span> and <span class="math inline">\(h: C \rightarrow D\)</span> are all functions then
-<span class="math display">\[ f \circ (g \circ h) = (f \circ g) \circ h  \]</span></p>
+<span class="math display">\[ h \circ (g \circ f) = (h \circ g) \circ f  \]</span></p>
 <div class="figure"><span style="display:block;" id="fig:unnamed-chunk-19"></span>
 <img src="compassoc.png" alt="picture of associativity of composition of function"  />
 <p class="caption">
@@ -361,26 +361,26 @@ Figure 3.11: picture of associativity of composition of function
 </div>
 <div class="proof">
 <p><span id="unlabeled-div-77" class="proof"><em>Proof</em>. </span>To prove this we can evaluate the functions at a given <span class="math inline">\(x \in A\)</span>.</p>
-<p><span class="math display">\[f \circ (g \circ h)(x) = (g \circ h)(f(x)) = h(g(f(x))).\]</span></p>
-<p><span class="math display">\[(f\circ g) \circ h(x) = h (f\circ g(x)) = h(g(f(x))).\]</span></p>
+<p><span class="math display">\[h \circ (g \circ f)(x) = (h \circ g)(f(x)) = h(g(f(x))).\]</span></p>
+<p><span class="math display">\[(h\circ g) \circ f(x) = h (g\circ f(x)) = h(g(f(x))).\]</span></p>
 </div>
 <p>We can relate composition of functions to injectivity and surjectivity</p>
 <div class="lemma">
 <p><span id="lem:unlabeled-div-78" class="lemma"><strong>Lemma 3.7  </strong></span>Suppose that <span class="math inline">\(A, B\)</span> and <span class="math inline">\(C\)</span> are sets and <span class="math inline">\(f: A \rightarrow B\)</span> and <span class="math inline">\(g: B \rightarrow C\)</span> are functions then</p>
 <ul>
-<li><p>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are injective then so is <span class="math inline">\(f \circ g\)</span>,</p></li>
-<li><p>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are surjective then so is <span class="math inline">\(f \circ g\)</span>.</p></li>
+<li><p>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are injective then so is <span class="math inline">\(g \circ f\)</span>,</p></li>
+<li><p>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are surjective then so is <span class="math inline">\(g \circ f\)</span>.</p></li>
 </ul>
 </div>
 <div class="proof">
-<p><span id="unlabeled-div-79" class="proof"><em>Proof</em>. </span>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are injective then given <span class="math inline">\(z \in C\)</span> there is at most one <span class="math inline">\(y \in B\)</span> with <span class="math inline">\(g(y)=z\)</span> then for this <span class="math inline">\(y\)</span> there is at most one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(f(x) = y\)</span> therefore there is at most one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(f\circ g(x) = z\)</span>.</p>
-<p>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are surjective then given <span class="math inline">\(z \in C\)</span> there is at least one <span class="math inline">\(y \in B\)</span> with <span class="math inline">\(g(y) = z\)</span> and for this <span class="math inline">\(y\)</span> there is at least one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(f(x) = y\)</span> therefore there is at least one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(f \circ g (x) = z\)</span>.</p>
+<p><span id="unlabeled-div-79" class="proof"><em>Proof</em>. </span>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are injective then given <span class="math inline">\(z \in C\)</span> there is at most one <span class="math inline">\(y \in B\)</span> with <span class="math inline">\(g(y)=z\)</span> then for this <span class="math inline">\(y\)</span> there is at most one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(f(x) = y\)</span> therefore there is at most one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(g\circ f(x) = z\)</span>.</p>
+<p>If both <span class="math inline">\(f\)</span> and <span class="math inline">\(g\)</span> are surjective then given <span class="math inline">\(z \in C\)</span> there is at least one <span class="math inline">\(y \in B\)</span> with <span class="math inline">\(g(y) = z\)</span> and for this <span class="math inline">\(y\)</span> there is at least one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(f(x) = y\)</span> therefore there is at least one <span class="math inline">\(x \in A\)</span> with <span class="math inline">\(g \circ f (x) = z\)</span>.</p>
 </div>
 <p>This next set of results is about what it means to be the <em>inverse of a function</em>. This can be a subtle and quite complicated issue.</p>
 <div class="example">
-<p><span id="exm:unlabeled-div-80" class="example"><strong>Example 3.8  </strong></span>As we just saw above if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(f \circ g (x) = |x|\)</span>. So even though we think of square root and squaring as inverses of each other in this case <span class="math inline">\(f \circ g\)</span> is not equal to the identity function.</p>
-<p>On the other hand if <span class="math inline">\(f : [0, \infty) \rightarrow [0, \infty)\)</span> defined by <span class="math inline">\(f(x)=x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt(y)\)</span> then <span class="math inline">\(f \circ g(x) = x\)</span> so if we change the domain of <span class="math inline">\(f\)</span> we can think for these functions as inverse to each other.</p>
-<p>We also have that if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0, \infty) \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(g(y) = \sqrt(y)\)</span> (as in the first part of the example) then <span class="math inline">\(g\circ f)(y) = y\)</span>. we can think of these as inverse to eachother in one order but not in the other order.</p>
+<p><span id="exm:unlabeled-div-80" class="example"><strong>Example 3.8  </strong></span>As we just saw above if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(g \circ f (x) = |x|\)</span>. So even though we think of square root and squaring as inverses of each other in this case <span class="math inline">\(g \circ f\)</span> is not equal to the identity function.</p>
+<p>On the other hand if <span class="math inline">\(f : [0, \infty) \rightarrow [0, \infty)\)</span> defined by <span class="math inline">\(f(x)=x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt(y)\)</span> then <span class="math inline">\(g \circ f(x) = x\)</span> so if we change the domain of <span class="math inline">\(f\)</span> we can think for these functions as inverse to each other.</p>
+<p>We also have that if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0, \infty) \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(g(y) = \sqrt(y)\)</span> (as in the first part of the example) then <span class="math inline">\(g\circ g)(y) = y\)</span>. we can think of these as inverse to eachother in one order but not in the other order.</p>
 </div>
 <div class="definition">
 <p><span id="def:unlabeled-div-81" class="definition"><strong>Definition 3.5  (left and right inverses) </strong></span>Let <span class="math inline">\(A\)</span> and <span class="math inline">\(B\)</span> be sets and let <span class="math inline">\(f: A \rightarrow B\)</span> and <span class="math inline">\(g: B \rightarrow A\)</span>.</p>
