--- a/operations-on-sets-and-functions.html
+++ b/operations-on-sets-and-functions.html
@@ -29,7 +29,7 @@ set in the _output.yml file.</p>" />
 <meta name="author" content="Jo Evans" />
 
 
-<meta name="date" content="2024-10-07" />
+<meta name="date" content="2024-10-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -327,8 +327,8 @@ Figure 3.8: picture of De Morgan’s Laws 2
 <div id="operations-on-functions" class="section level2 hasAnchor" number="3.3">
 <h2><span class="header-section-number">3.3</span> Operations on functions<a href="operations-on-sets-and-functions.html#operations-on-functions" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div class="definition">
-<p><span id="def:unlabeled-div-72" class="definition"><strong>Definition 3.4  (composition) </strong></span>Given sets <span class="math inline">\(A, B\)</span> and <span class="math inline">\(C\)</span> and functions <span class="math inline">\(f: B \rightarrow C\)</span> and <span class="math inline">\(g: A \rightarrow B\)</span> we can define a new function <span class="math inline">\(f \circ g\)</span> from <span class="math inline">\(A\)</span> to <span class="math inline">\(C\)</span> by
-<span class="math display">\[ f\circ g(x) = f(g(x)).  \]</span></p>
+<p><span id="def:unlabeled-div-72" class="definition"><strong>Definition 3.4  (composition) </strong></span>Given sets <span class="math inline">\(A, B\)</span> and <span class="math inline">\(C\)</span> and functions <span class="math inline">\(f: A \rightarrow B\)</span> and <span class="math inline">\(g: B \rightarrow C\)</span> we can define a new function <span class="math inline">\(g \circ f\)</span> from <span class="math inline">\(A\)</span> to <span class="math inline">\(C\)</span> by
+<span class="math display">\[ g\circ f(x) = g(f(x)).  \]</span></p>
 <div class="figure"><span style="display:block;" id="fig:unnamed-chunk-17"></span>
 <img src="compositiondiagram.png" alt="diagram of function composition"  />
 <p class="caption">
@@ -346,7 +346,7 @@ Figure 3.10: example of function composition
 </div>
 </div>
 <div class="example">
-<p><span id="exm:unlabeled-div-74" class="example"><strong>Example 3.7  </strong></span>Another example would be if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(g \circ g (x) = |x|\)</span> and is defined from <span class="math inline">\(\mathbb{R}\)</span> to <span class="math inline">\([0,\infty)\)</span>.</p>
+<p><span id="exm:unlabeled-div-74" class="example"><strong>Example 3.7  </strong></span>Another example would be if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(g \circ f (x) = |x|\)</span> and is defined from <span class="math inline">\(\mathbb{R}\)</span> to <span class="math inline">\([0,\infty)\)</span>.</p>
 </div>
 <div class="remark">
 <p><span id="unlabeled-div-75" class="remark"><em>Remark</em>. </span>An important example of composition is if <span class="math inline">\(A\)</span> is a set and <span class="math inline">\(f: A \rightarrow A\)</span> then we can compose <span class="math inline">\(A\)</span> with itself. We often write <span class="math inline">\(f\circ f = f^2\)</span> and <span class="math inline">\(f^n= f\circ f^{n-1}\)</span>.</p>
@@ -381,14 +381,14 @@ Figure 3.11: picture of associativity of composition of function
 <p>This next set of results is about what it means to be the <em>inverse of a function</em>. This can be a subtle and quite complicated issue.</p>
 <div class="example">
 <p><span id="exm:unlabeled-div-80" class="example"><strong>Example 3.8  </strong></span>As we just saw above if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0, \infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(g \circ f (x) = |x|\)</span>. So even though we think of square root and squaring as inverses of each other in this case <span class="math inline">\(g \circ f\)</span> is not equal to the identity function.</p>
-<p>On the other hand if <span class="math inline">\(f : [0, \infty) \rightarrow [0, \infty)\)</span> defined by <span class="math inline">\(f(x)=x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt(y)\)</span> then <span class="math inline">\(g \circ f(x) = x\)</span> so if we change the domain of <span class="math inline">\(f\)</span> we can think for these functions as inverse to each other.</p>
-<p>We also have that if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0, \infty) \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(g(y) = \sqrt(y)\)</span> (as in the first part of the example) then <span class="math inline">\(g\circ g)(y) = y\)</span>. we can think of these as inverse to eachother in one order but not in the other order.</p>
+<p>On the other hand if <span class="math inline">\(f : [0, \infty) \rightarrow [0, \infty)\)</span> defined by <span class="math inline">\(f(x)=x^2\)</span> and <span class="math inline">\(g: [0,\infty) \rightarrow [0,\infty)\)</span> is defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> then <span class="math inline">\(g \circ f(x) = x\)</span> so if we change the domain of <span class="math inline">\(f\)</span> we can think for these functions as inverse to each other.</p>
+<p>We also have that if <span class="math inline">\(f: \mathbb{R} \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(f(x) = x^2\)</span> and <span class="math inline">\(g: [0, \infty) \rightarrow [0,\infty)\)</span> defined by <span class="math inline">\(g(y) = \sqrt{y}\)</span> (as in the first part of the example) then <span class="math inline">\(f\circ g)(y) = y\)</span>. we can think of these as inverse to eachother in one order but not in the other order.</p>
 </div>
 <div class="definition">
 <p><span id="def:unlabeled-div-81" class="definition"><strong>Definition 3.5  (left and right inverses) </strong></span>Let <span class="math inline">\(A\)</span> and <span class="math inline">\(B\)</span> be sets and let <span class="math inline">\(f: A \rightarrow B\)</span> and <span class="math inline">\(g: B \rightarrow A\)</span>.</p>
 <ul>
-<li><p>We call <span class="math inline">\(g\)</span> a <em>left inverse</em> of <span class="math inline">\(f\)</span> if <span class="math inline">\(g\circ f = Id_B\)</span>,</p></li>
-<li><p>We call <span class="math inline">\(g\)</span> a <em>right inverse</em> of <span class="math inline">\(f\)</span> if <span class="math inline">\(f\circ g = Id_A\)</span>.</p></li>
+<li><p>We call <span class="math inline">\(g\)</span> a <em>left inverse</em> of <span class="math inline">\(f\)</span> if <span class="math inline">\(g\circ f = Id_A\)</span>,</p></li>
+<li><p>We call <span class="math inline">\(g\)</span> a <em>right inverse</em> of <span class="math inline">\(f\)</span> if <span class="math inline">\(f\circ g = Id_B\)</span>.</p></li>
 <li><p>We call <span class="math inline">\(g\)</span> an <em>inverse</em> of <span class="math inline">\(f\)</span> if it is both a left inverse and a right inverse. If an inverse exists we often write <span class="math inline">\(g = f^{-1}\)</span>.</p></li>
 </ul>
 </div>
