--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ set in the _output.yml file.</p>" />
 <meta name="author" content="Jo Evans" />
 
 
-<meta name="date" content="2024-10-11" />
+<meta name="date" content="2024-09-05" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -101,12 +101,12 @@ set in the _output.yml file.</p>" />
 </ul></li>
 <li class="chapter" data-level="4" data-path="relations.html"><a href="relations.html"><i class="fa fa-check"></i><b>4</b> Relations</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="relations.html"><a href="relations.html#equivalence-relations-equivalence-classes-and-quotients"><i class="fa fa-check"></i><b>4.1</b> Equivalence relations, Equivalence classes and Quotients</a></li>
-<li class="chapter" data-level="4.2" data-path="relations.html"><a href="relations.html#order-relations"><i class="fa fa-check"></i><b>4.2</b> Order relations</a>
+<li class="chapter" data-level="4.1" data-path="relations.html"><a href="relations.html#equivalence-relations-equivalence-classes-and-quotients"><i class="fa fa-check"></i><b>4.1</b> Equivalence relations, Equivalence classes and Quotients</a>
 <ul>
-<li class="chapter" data-level="4.2.1" data-path="relations.html"><a href="relations.html#quotients"><i class="fa fa-check"></i><b>4.2.1</b> Quotients</a></li>
+<li class="chapter" data-level="4.1.1" data-path="relations.html"><a href="relations.html#quotients"><i class="fa fa-check"></i><b>4.1.1</b> Quotients</a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="relations.html"><a href="relations.html#integers-via-quotients"><i class="fa fa-check"></i><b>4.3</b> Integers via quotients</a></li>
+<li class="chapter" data-level="4.2" data-path="relations.html"><a href="relations.html#integers-via-quotients"><i class="fa fa-check"></i><b>4.2</b> Integers via quotients</a></li>
+<li class="chapter" data-level="4.3" data-path="relations.html"><a href="relations.html#order-relations"><i class="fa fa-check"></i><b>4.3</b> Order relations</a></li>
 <li class="chapter" data-level="4.4" data-path="relations.html"><a href="relations.html#modular-arithmetic"><i class="fa fa-check"></i><b>4.4</b> Modular arithmetic</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="logic.html"><a href="logic.html"><i class="fa fa-check"></i><b>5</b> Logic</a>
@@ -124,28 +124,8 @@ set in the _output.yml file.</p>" />
 <li class="chapter" data-level="7" data-path="some-number-theory.html"><a href="some-number-theory.html"><i class="fa fa-check"></i><b>7</b> Some number theory</a>
 <ul>
 <li class="chapter" data-level="7.1" data-path="some-number-theory.html"><a href="some-number-theory.html#divisors-and-prime-numbers"><i class="fa fa-check"></i><b>7.1</b> Divisors and prime numbers</a></li>
-<li class="chapter" data-level="7.2" data-path="some-number-theory.html"><a href="some-number-theory.html#euclids-algorithm"><i class="fa fa-check"></i><b>7.2</b> Euclid’s Algorithm</a>
-<ul>
-<li class="chapter" data-level="7.2.1" data-path="some-number-theory.html"><a href="some-number-theory.html#geometric-interpretation-of-euclids-algorithm"><i class="fa fa-check"></i><b>7.2.1</b> Geometric interpretation of Euclid’s algorithm</a></li>
-<li class="chapter" data-level="7.2.2" data-path="some-number-theory.html"><a href="some-number-theory.html#continued-fractions"><i class="fa fa-check"></i><b>7.2.2</b> Continued fractions</a></li>
-<li class="chapter" data-level="7.2.3" data-path="some-number-theory.html"><a href="some-number-theory.html#bezouts-lemma"><i class="fa fa-check"></i><b>7.2.3</b> Bezout’s lemma</a></li>
 </ul></li>
-<li class="chapter" data-level="7.3" data-path="some-number-theory.html"><a href="some-number-theory.html#chinese-remainder-theorem"><i class="fa fa-check"></i><b>7.3</b> Chinese remainder theorem</a></li>
-<li class="chapter" data-level="7.4" data-path="some-number-theory.html"><a href="some-number-theory.html#fermats-little-theorem-and-eulers-theorem"><i class="fa fa-check"></i><b>7.4</b> Fermat’s Little Theorem and Euler’s Theorem</a></li>
-</ul></li>
-<li class="chapter" data-level="8" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html"><i class="fa fa-check"></i><b>8</b> Algorithms and Algorithmic complexity</a>
-<ul>
-<li class="chapter" data-level="8.1" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html#algorithmic-complexity"><i class="fa fa-check"></i><b>8.1</b> Algorithmic Complexity</a>
-<ul>
-<li class="chapter" data-level="8.1.1" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html#big-and-little-o-notation"><i class="fa fa-check"></i><b>8.1.1</b> Big and little O notation</a></li>
-</ul></li>
-<li class="chapter" data-level="8.2" data-path="algorithms-and-algorithmic-complexity.html"><a href="algorithms-and-algorithmic-complexity.html#running-times-of-algorithms"><i class="fa fa-check"></i><b>8.2</b> Running times of algorithms</a></li>
-</ul></li>
-<li class="chapter" data-level="9" data-path="cryptography.html"><a href="cryptography.html"><i class="fa fa-check"></i><b>9</b> Cryptography</a>
-<ul>
-<li class="chapter" data-level="9.1" data-path="cryptography.html"><a href="cryptography.html#discrete-logarithms-and-diffie-hellman"><i class="fa fa-check"></i><b>9.1</b> Discrete logarithms and Diffie-Hellman</a></li>
-<li class="chapter" data-level="9.2" data-path="cryptography.html"><a href="cryptography.html#rsa-cryptography"><i class="fa fa-check"></i><b>9.2</b> RSA Cryptography</a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -169,18 +149,18 @@ set in the _output.yml file.</p>" />
 <div id="header">
 <h1 class="title">MA132: Foundations Lecture Notes</h1>
 <p class="author"><em>Jo Evans</em></p>
-<p class="date"><em>2024-10-11</em></p>
+<p class="date"><em>2024-09-05</em></p>
 </div>
 <div id="about" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">Chapter 1</span> About<a href="index.html#about" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>These are the 2024-25 lecture course for the Warwick undergraduate course MA132: Foundations. The material up to chapter 7 is also relevant to joint degree students taking Sets and Numbers.</p>
-<p>These notes are heavily based on previous notes of Saul Schleimer and Dave Wood, though all mistakes are my own!</p>
+<p>These are the 2024-25 lecture course for the Warwick undergraduate course MA132: Foundations.</p>
+<p>These notes are heavily based on previous notes of Saul Schleimer, though all mistakes are my own!</p>
 <p>Please send me any typos (or possible typos) that you find. And be on the look out for typos.</p>
 <div id="how-to-use-these-notes" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> How to use these notes<a href="index.html#how-to-use-these-notes" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>These notes are designed to generate both a html version (which should work well with screen readers) and a latex generated pdf and epub (which will work better if you want to print the notes). You can access the pdf/epub by pressing the download button in the top right (little down arrow).</p>
 <p>Everything you need to know for the exam and future courses should be contained in these notes. There will also be examples, some discussions and some non-examinable sections.</p>
-<p>Similarly, almost everything you need to know will be written by me on the board in lectures. There may be some exceptions which I will warn you about!</p>
+<p>Similarly, everything you need to know will be written by me on the board in lectures.</p>
 <p>There are three main ways that undergraduates typically use printed lecture notes:</p>
 <ol style="list-style-type: decimal">
 <li><p>They take their own notes during the lecture (or take none) and refer to these notes outside the lecture to supplement those notes, to check things, when doing exercises, or during revision.</p></li>
